Integrando frontend com backend

--- a/frontend/src/app/helloworld/helloworld.component.html
+++ b/frontend/src/app/helloworld/helloworld.component.html
@@ -1,2 +1,8 @@
 <!-- helloworld.component.html -->
-<h1 class="text-success">Esse é o componente Hello, World!</h1>  
+<div class="container">
+    <p>
+        Componente <b>helloworld</b> que chama o backend que devolve o texto:
+        <br/>
+        <i class="text-success">{{ textFromBackend }}</i>
+    </p>      
+</div>
