Criando a funcionalidade de buscar motorista

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,6 +3,6 @@
   <h1>Meu Aplicativo Angular com Bootstrap</h1>
   <p>Bem-vindo ao meu MVP!</p>
   
-  <!-- Adicionando o componente helloworld -->
-  <app-helloworld></app-helloworld>
+  
+  <app-pesquisa-motorista></app-pesquisa-motorista>
 </div>
