Pequenos ajustes na tela de pesquisa por motorista

--- a/frontend/src/app/pesquisa-motorista/pesquisa-motorista.component.html
+++ b/frontend/src/app/pesquisa-motorista/pesquisa-motorista.component.html
@@ -47,16 +47,14 @@
         <thead>
           <tr>
             <th>Nome</th>
-            <th>Telefone</th>
             <th>E-mail</th>
             <!-- Adicione mais colunas conforme necessário -->
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let motorista of motoristas">
-            <td>{{ motorista.nome }}</td>
-            <td>{{ motorista.telefone }}</td>
-            <td>{{ motorista.email }}</td>
+            <td>{{ motorista.Nome }}</td>
+            <td>{{ motorista.Email }}</td>
             <!-- Adicione mais colunas conforme necessário -->
           </tr>
         </tbody>
